# PDYP-FINAL

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.opencode/plans/: flujo-dos-fases.md
docs/: ARCHITECTURE.md  Carrito_RC_Documentacion_Tecnica.docx  generate-doc.js  package-lock.json
firmware/: platformio.ini
firmware/src/: main.cpp
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/instruction-service/: Dockerfile  pyproject.toml
services/instruction-service/app/: main.py  models.py
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/app/: main.py
services/ros2-bridge/: .dockerignore  Dockerfile
services/ros2-bridge/app/: main.py
services/vlm-service/: Dockerfile  pyproject.toml
services/vlm-service/app/: main.py
