[project]
name = "api-gateway"
version = "0.1.0"
description = "Punto de entrada y orquestador del flujo: usuario -> VLM -> LLM -> ROS2 -> Mongo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[tool.uv]
package = false
