[project]
name = "instruction-service"
version = "0.1.0"
description = "Persistencia del historial de instrucciones del carrito en MongoDB Atlas"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "pydantic>=2.7",
]

[tool.uv]
package = false
