[project]
name = "llm-service"
version = "0.1.0"
description = "Decide la acción de movimiento del carrito a partir de la instrucción del usuario y el contexto visual del VLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "pydantic>=2.7",
]

[tool.uv]
package = false
