[project]
name = "vlm-service"
version = "0.1.0"
description = "Capta un frame de la cámara IP del celular y lo describe con Gemini (VLM) vía OpenRouter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.7",

]

[tool.uv]
package = false
